httpbin/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: playson-task
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000

      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest 

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi

          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 6  

          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: httpbin
      volumes:
        - name: tmp
          emptyDir: 
            sizeLimit: 256Mi
