httpbin/3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: playson-task
spec:
  selector:
    app: httpbin
  ports:
    - port: 8080
      targetPort: 80
